--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         }
     ],
     "minimum-stability": "stable",
+    "license": "MIT",
     "type": "project",
     "require": {
         "php": ">=5.4.0",
