--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "minimum-stability": "stable",
     "license": "MIT",
-    "type": "project",
+    "type": "library",
     "require": {
         "php": ">=5.4.0",
         "ext-curl": "*",
