--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=5.4.0",
         "ext-curl": "*",
-        "guzzlehttp/guzzle": "^6.3@dev"
+        "guzzlehttp/guzzle": ">=6.3"
     },
     "autoload": {
         "psr-4": {
