--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "citigo/kiotviet-php-sdk",
+    "name": "duongthien/kiotviet-php-sdk",
     "description": "This is package for developer work with kiotviet api",
     "authors": [
         {
